블로그 카테고리 재설정

--- a/_posts/AlgorithmBJ/2019-08-31-1_bj3190_뱀.md
+++ b/_posts/AlgorithmBJ/2019-08-31-1_bj3190_뱀.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: (삼성 SW 기출) 백준 3190 - 뱀
-category: Algorithm
-tags: [Algorithm, SWEA]
+category: Algorithm_BJ
+tags: [Algorithm, 백준, 삼성 역테 기출]
 comments: true
 ---
 
