--- a/_posts/AlgorithmBJ/2019-08-31-2_bj16234_인구이동.md
+++ b/_posts/AlgorithmBJ/2019-08-31-2_bj16234_인구이동.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: (삼성 SW 기출) 백준 16234 - 인구 이동
-category: Algorithm
-tags: [Algorithm, SWEA]
+category: Algorithm_BJ
+tags: [Algorithm, 백준, 삼성 역테 기출]
 comments: true
 ---
 
