코드박스 스타일 확인

--- a/_posts/PHP/2019-12-29-02-Arrays.md
+++ b/_posts/PHP/2019-12-29-02-Arrays.md
@@ -37,7 +37,7 @@ $names = [
 require 'index.view.php';
 ```
 
-```php+HTML
+```php
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
@@ -89,7 +89,7 @@ $person = [
 require 'index.view.php';
 ```
 
-```php+HTML
+```html
 </<!doctype html>
 <html lang="en">
 <head>
