Laracasts - Laravel 기본 강의 Readme 최종 정리

--- a/_posts/PHP/2019-12-29-05-class.md
+++ b/_posts/PHP/2019-12-29-05-class.md
@@ -72,7 +72,7 @@ HTML과 결합하여 사용할 경우
 
 - 프로퍼티를 `protected`로 정의 할 경우에는 외부로의 호출이 불가능함. => 프로퍼티를 `public`으로 변경
 
-```php+HTML
+```php
 <ul>
   <?php foreach ($tasks as $task) : ?>
   <li><?= $task->description; ?></li>
@@ -92,7 +92,7 @@ $tasks = [
 $tasks[0]->complete();
 ```
 
-```php+HTML
+```php
 <ul>
   <?php foreach ($tasks as $task) : ?>
   <li>
