--- a/_posts/PHP/2019-12-29-10-View.md
+++ b/_posts/PHP/2019-12-29-10-View.md
@@ -13,7 +13,7 @@ views/partial : 재사용가능한 template(HTML)을 추출하여 partial 폴더
 - `<?php require('partials/nav.php); ?>`
 -  DJango에서 템플릿 확장/상속(base template)과 같은 개념임.
 
-```php+HTML
+```php
 <body>
 
 <?php require('partials/nav.php'); ?>
@@ -30,8 +30,6 @@ views/partial : 재사용가능한 template(HTML)을 추출하여 partial 폴더
 ```
 
 
-
-#### 2. Header & Footer 
 
 마찬가지로, partial의 개념을 이용하여 head, footer의 재사용되는 코드를 따로 빼서 새로운 php 파일로 관리한 후 그 파일을 불러오는 방식으로 어플리케이션 구성을 다듬을 수 있다.
 
@@ -61,3 +59,4 @@ views/partial : 재사용가능한 template(HTML)을 추출하여 partial 폴더
 <h1>About Us</h1>
 <?php require('partials/footer.php') ?> 
 ```
+
