--- a/_posts/PHP/2019-12-29-04-db.md
+++ b/_posts/PHP/2019-12-29-04-db.md
@@ -6,7 +6,7 @@ tags: [Laracast, PHP]
 comments: true
 ---
 
-#### 1. MySQL
+#### 1. MySQL 기본 설정
 
 설치 및 기본 셋팅 관련 정보는 [링크](https://gmlwjd9405.github.io/2018/12/23/mysql-tips.html) 참조
 
@@ -29,9 +29,9 @@ brew servcies stop mysql
 mysql.server stop 
 ```
 
-MySQL 관련 기초 코드
+#### 2. MySQL 관련 기초 코드
 
-```mysql
+```sql
 mysql> show databases;  #database list
 mysql> create database mytodo; #create database
 Query OK, 1 row affected (0.00 sec)
