--- a/_posts/Laravel/2019-12-31-TDD02_update.md
+++ b/_posts/Laravel/2019-12-31-TDD02_update.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Test Driven Laravel 02 - BUpdate 테스트 코드 구현 / 리팩토링
+title: Test Driven Laravel 02 - Book:Update 테스트 코드 구현 / 리팩토링
 category: Laravel
 tags: [PHP, TDD, Laravel, coderstape]
 comments: true
@@ -103,7 +103,7 @@ public function update(Book $book)  // route model binding
 
 
 
-#### 2. Create & Update 테스트 코드 및 로직 구
+#### 2. Create & Update 테스트 코드 및 로직 구현
 
 결과적으로, 데이터를 생성하고 업데이트하는 로직을 성공적으로 아래와 같이 구현 완료
 
