포스팅 설명 추가

--- a/_posts/PHP/2019-12-29-04-db.md
+++ b/_posts/PHP/2019-12-29-04-db.md
@@ -6,6 +6,8 @@ tags: [Laracast, PHP]
 comments: true
 ---
 
+> Laracasts - The PHP Practitioner [강의](https://laracasts.com/series/php-for-beginners)를 듣고 정리한 포스팅 입니다.
+
 #### 1. MySQL 기본 설정
 
 설치 및 기본 셋팅 관련 정보는 [링크](https://gmlwjd9405.github.io/2018/12/23/mysql-tips.html) 참조
