--- a/_posts/PHP/2019-12-29-05-class.md
+++ b/_posts/PHP/2019-12-29-05-class.md
@@ -6,6 +6,8 @@ tags: [Laracast, PHP]
 comments: true
 ---
 
+> Laracasts - The PHP Practitioner [강의](https://laracasts.com/series/php-for-beginners)를 듣고 정리한 포스팅 입니다.
+
 #### 1. Class의 기본 구성
 
 property와 method로 구성되어있음.
