--- a/_posts/PHP/2019-12-29-06-pdo.md
+++ b/_posts/PHP/2019-12-29-06-pdo.md
@@ -6,6 +6,8 @@ tags: [Laracast, PHP]
 comments: true
 ---
 
+> Laracasts - The PHP Practitioner [강의](https://laracasts.com/series/php-for-beginners)를 듣고 정리한 포스팅 입니다.
+
 #### 1. PDO
 
 PHP Database Object의 약자로,  데이터베이스에 접근하는 공통 API를 제공하는 것을 목적으로 만들어 짐. Prepared statement를 제공하므로 SQL Injection 방어에 사용될 수 있음. 
