--- a/_posts/PHP/2019-12-29-07-pdo 2.md
+++ b/_posts/PHP/2019-12-29-07-pdo 2.md
@@ -6,6 +6,8 @@ tags: [Laracast, PHP]
 comments: true
 ---
 
+> Laracasts - The PHP Practitioner [강의](https://laracasts.com/series/php-for-beginners)를 듣고 정리한 포스팅 입니다.
+
 #### 1. PDO Refactoring
 
 앞 포스팅 코드를 기반으로 refactoring을 진행할 수 있음. 데이터베이스에 연결 & 쿼리 실행 + 데이터 갖고오기의 코드를 database라는 디렉토리 내에 각각 세분화 시킬 수 있음.
