--- a/_posts/PHP/2019-12-29-09-Router.md
+++ b/_posts/PHP/2019-12-29-09-Router.md
@@ -6,6 +6,8 @@ tags: [Laracast, PHP]
 comments: true
 ---
 
+> Laracasts - The PHP Practitioner [강의](https://laracasts.com/series/php-for-beginners)를 듣고 정리한 포스팅 입니다.
+
 #### 1. Router
 
 어플리케이션의 url을 관장하는 역할(Django의 urls.py). 어플리케이션의 구조를 아래와 같이 좀 더 구체화시킴
