--- a/_posts/PHP/2019-12-29-10-View.md
+++ b/_posts/PHP/2019-12-29-10-View.md
@@ -6,6 +6,8 @@ tags: [Laracast, PHP]
 comments: true
 ---
 
+> Laracasts - The PHP Practitioner [강의](https://laracasts.com/series/php-for-beginners)를 듣고 정리한 포스팅 입니다.
+
 #### 1. Template 상속
 
 views/partial : 재사용가능한 template(HTML)을 추출하여 partial 폴더에서 관리할 수 있음. 
