--- a/_posts/PHP/2019-12-01-PHP07_regex.md
+++ b/_posts/PHP/2019-12-01-PHP07_regex.md
@@ -18,11 +18,12 @@ comments: true
 
 - /foo bar/im 에서 im을 `pattern modifier`이라고 함 (패턴을 동작하는 방법을 수정)
   - `i` : 대소문자 구분하지 않도록 함
+  
   - `m`: multiline 각각의 행마다 조건을 적용시킬 때 사용
+  
+    
 
-
-
-![](/img/regex.gif)
+![](img/regex.gif)
 
 예시)
 
