이미지 경로 수정

--- a/_posts/PHP/2019-12-01-PHP07_regex.md
+++ b/_posts/PHP/2019-12-01-PHP07_regex.md
@@ -21,7 +21,8 @@ comments: true
   
   - `m`: multiline 각각의 행마다 조건을 적용시킬 때 사용
   
-    
+
+<img src="/assets/php/regex.gif"/>
 
 ![](img/regex.gif)
 
